src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width { fixed 1000; }\n    default-window-height {  }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1000 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1000 × 688, bounds: 1248 × 688, states: []
size: 1000 × 688, bounds: 1248 × 688, states: [Activated]
